clusters/k3s-cluster/speedtest/speedtest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speedtest
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: speedtest
spec:
  type: ClusterIP
  selector:
    app: speedtest
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: speedtest
spec:
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
        - name: speedtest
          image: openspeedtest/latest:v2.0.4
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
          ports:
            - containerPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: limit
  namespace: speedtest
spec:
  buffering:
    maxRequestBodyBytes: 35000000
    memRequestBodyBytes: 35000000
    maxResponseBodyBytes: 35000000
    memResponseBodyBytes: 35000000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  namespace: speedtest
  labels:
    name: speedtest
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: speedtest-limit@kubernetescrd
spec:
  rules:
    - host: speedtest.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: speedtest
                port:
                  number: 3000
